# DBMS-From-Scratch

./: .gitignore  Creating KV Store.go  Database Project Poster.pptx  README.md  Testing Queries.txt  go.mod
Database Project/: CMakeLists.txt  Database Project.vcxproj  Database Project.vcxproj.filters  DatabaseManager.cpp  SimpleHttpServer.cpp  SimpleHttpServer.h  bptree.cpp  bptree.h  catalog.cpp  catalog.h  database_manager.h  main.cpp  query_parser.cpp  query_parser.h  record.cpp  record.h
Database Project Console/: Database Project.sln  Database Project.vcxproj  DatabaseManager.cpp  bptree.h  catalog.h  page.cpp  page.h  record.cpp
Database Project/Database Project/x64/Debug/: Database Project.exe.recipe  Database Project.ilk  vc143.idb
Database Project/Database Project/x64/Debug/Database Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Database Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Database Project/db_data/amirwork/: weekend.idx  weekwork.idx
Database Project/x64/Debug/data/: flights.idx  new.idx  orders.idx  test2.idx  test3.idx  users.idx
Transaction Manager/: TransactionManager.cpp  users
data/: users.idx
db-frontend/: package-lock.json  package.json
db-frontend/public/: index.html
db-frontend/src/: App.css  App.js
db-frontend/src/components/: DatabaseQuery.css  DatabaseQuery.jsx  QueryEditor.css  QueryEditor.jsx  ResultsView.css  ResultsView.jsx  Sidebar.css  Sidebar.jsx
gateway-service/: package-lock.json  package.json  server.js
include/storage/: bptree.h  catalog.h  database_manager.h  page.h
src/: main.cpp
src/storage/: DatabaseManager.cpp  bptree.cpp  catalog.cpp  page.cpp  record.cpp
tests/: test_bptree.cpp
(+6 files in other folders)
